# labels_mapper

./: .gitignore  Readme.md  labels_mapper.py  pyproject.toml  utils.py
labels_mapper/: folder_stuff.py  labels_mapper.py  tests.py  utils.py
tests/: test-naive.sh  test.sh  tests.py
